# MCSniperRust

./: .gitignore  README.md  package-lock.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: account.rs  lib.rs  log.rs  main.rs  sniper.rs
