[package]
name = "MCSniperRust"
version = "0.1.2"
description = "A name sniper"
authors = ["sushi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "saas_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.24", features = ["blocking", "cookies", "socks"] }
clippers = "0.1.2"
regex = "1.12.2"
chrono = "0.4.39"
urlencoding = "2.1.3"
base64 = "0.22.1"
